# physalis

./: .gitignore  Cargo.toml  LICENSE  README.md  backup.go  backup_test.go  blob_storage.go  cbor.go  cbor_test.go  emitter.go  event_log.go  go.mod  go.sum  physalis.go  reducer.go  reducer_reader.go  reducer_reader_kv.go  reducer_registry.go  reducer_runtime.go  reducer_runtime_test.go  system.go  version.go
godev/: .gitignore  go.mod  go.sum  physalis.go  reducer_reader.go  reducer_registry.go  reducer_registry_test.go  reducer_runtime.go  reducer_runtime_test.go  system.go
godev/bucket_proxy/: bucket_proxy.go
godev/bucket_proxy/scratch/: bp_scratch.go
godev/d1/: main1.go
godev/db_dev/: main.go
godev/db_wrapper_dev/: main.go
godev/eventhub/: hub.go
godev/eventhub/scratch/: eh_scratch.go
godev/internal/bucketproxy/: bucketproxy.go  bucketproxy_test.go
godev/iter_dev/: main.go
godev/physalis_dev/: main.go
godev/reflection_dev/: main.go
godev2/: event_log.go  physalis.go  reducer.go  reducer_registry.go  reducer_runtime.go  reducer_runtime_test.go
godev2/internal/: utils.go
godev2/internal/bucketproxy/: bucketproxy.go
godev2/physalis_dev/: main.go
internal/: utils.go
internal/bucketproxy/: bucketproxy.go
internal/log/: log.go
physalis_dev/: main.go
src/: error_notifier.rs  event_storage.rs  identity.rs  lib.rs  repository.rs  snapshot_storage.rs  try_as_ref.rs
src/event_storage/: redb_event_storage.rs
src/snapshot_storage/: mem_snapshot_storage.rs  redb_snapshot_storage.rs
src/test/: aggregate.rs  mod.rs
(+4 files in other folders)
