[package]
name = "physalis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2"
serde = { version = "1.0", features = ["derive", "alloc", "rc"] }
serde_json = "1.0"
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
rmp-serde = "1"
tokio = { version = "1", features = ["full"] }
redb = "2.3"
rpds = "1.1"
async-trait = "0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
rand = "0"
