[package]
name = "physalis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "alloc", "rc"] }
serde_json = "1.0"
# bincode = { version = "2", features = ["serde"] }
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
tokio = { version = "1", features = ["full"] }
redb = "3.0"
ordered-float = { version = "5", features = ["serde"] }
mlua = { version = "0.11", features = [
    "lua54",
    "vendored",
    "serialize",
    "macros",
    "anyhow",
    "async",
] }

[dev-dependencies]
